Version 2.02.99 - 
===================================
  Add activation/auto_set_activation_skip to control activation skip flagging.
  Add 's(k)ip activation' bit to lvs -o lv_attr to indicate skip flag attached.
  Add --ignoreactivationskip to lvcreate/vgchange/lvchange to ignore skip flag.
  Add --setactivationskip to lvcreate/lvchange to set activation skip flag.
  Automatically flag thin snapshots to be skipped during activation.
  Add support for persistent flagging of LVs to be skipped during activation.
  Add --type profilable to lvm dumpconfig to show profilable config settings.
  Add --mergedconfig to lvm dumpconfig for merged --config/--profile/lvm.conf.
  Relase memory and unblock signals in lock_vol error path.
  Define LVM2_* command errors in lvm2cmd.h and use in dmeventd plugins.
  Move errors.h to tools dir.
  Add man page entries for profile configuration and related options.
  Improve error loging when user tries to interrupt commands.
  Rename _swap_lv to _swap_lv_identifiers and move to allow an additional user.
  Rename snapshot segment returning methods from find_*_cow to find_*_snapshot.
  liblvm/python API: Additions: PV create/removal/resize/listing
  liblvm/python API: Additions: LV attr/origin/Thin pool/Thin LV creation
  Add vgs/lvs -o vg_profile/lv_profile to report profiles attached to VG/LV.
  Add default.profile configuration profile and install it on make install.
  Create a new 'conf' subdir for configuration files including profiles.
  Make selected thinp settings customizable by a profile.
  Support changing VG/LV profiles: vgchange/lvchange --profile/--detachprofile.
  Support storing profile name in metadata for both VGs and LVs.
  Add new --profile command line arg to select a configuration profile for use.
  Add config/profile_dir to set working directory to load profiles from.
  Add configure --with-default-profile-subdir to select dir to keep profiles in.
  Add support for configuration profiles.